client/styles/styles.scss
@import "~bootstrap/scss/bootstrap";
@import url("https://fonts.googleapis.com/css2?family=Fredoka:wght@100;200;400;500;700&family=Inter:wght@600;700&family=Shrikhand&family=Permanent+Marker&display=swap");

$isFree: #53ca3c;
$isToilet: #169873;
$isFood: #fcc54e;
$isPersonal: #ba37dd;
$isPhoneCharger: #53e3d4;
$isPoliceStation: #e7abff;
$isEMTStation: #f27d52;

$greeny: #169874;
$lightGreeny: #53ca3c;
$darkGreeny: #015d43;
$pinky: #e7abff;
$dark: #211234;
$yeller: #fcc54e;
$purpley: #8d3dad;
$lightPinky: #fbf4fe;

$primaryColor: #fffcf8;
$secondaryColor: $yeller;
$ternaryColor: $purpley;

$cardBackground: #fdf4ea;

$tabSelected: $primaryColor;
$tabSelectedBorder: $secondaryColor;
$tabUnselected: $cardBackground;
$tabUnselectedBorder: #e3e3e3;

//colorblind friendly hues
$tan: #d2b48c;
$turq: #30d5c8;

$offBlack: #291F1F;
$cardBackground2: #fdf9f4;


.card {
  padding: 10px;
  display: flex;
  flex-direction: column;
  position: relative;
  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
  // margin-bottom: 10px;
  // margin-top: 10px;
  margin: 4px 10px;
  border: 1px solid $secondaryColor;
  background-color: $cardBackground;
}

.card-body {
  padding: 0px;
}

#map-direction-card {
  max-width: 7rem;
  max-height: 10rem;
  margin-left: 10px;

  .card-body {
    padding-top: 1px;
    padding-right: 1px;
    padding-bottom: 1px;
    padding-left: 1px;
  }
}

#map-filter-container {
  background-color: $primaryColor;
  padding: 10px;
  display: flex;
  flex-direction: column;
  position: relative;
  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
  margin-bottom: 10px;
  margin-top: 10px;
  border: 1px solid $secondaryColor;
}

.btn {
  border: none;
}

.btn-wide {
  width: 80vw;
  max-width: 400px;
  margin: 10px auto;
  border: $secondaryColor solid 2px;
}

.btn-success {
  // keep this
  background-color: $yeller !important;
  color: white;
}

.btn-secondary {
  background-color: $ternaryColor !important;
  color: white;
}

// buttons to put icons inside for
// friend management
.btn-sm {
  border-radius: 15px;
  padding: 3px 6px;
  font-size: x-small;
  font-weight: bold;
}

.userPage-tabs .btn-sm {
  font-size:small !important;
  padding: 3px 6px !important;
}

.bottom-nav-button {
  height: 50px;
  width: 50px;
  background-color: $yeller;
  color: $dark;
  font-size: 50px;
  display: flex;
  align-items: center;
  justify-content: center;
}

.bottom-nav {
  justify-content: space-evenly;
  background-color: white;
  height: 12vh;
  border-top: $yeller solid 1px;
}

.top-nav {
  justify-content: space-evenly;
  background-color: $greeny;
  height: 8vh;
  color: white;
  font-size: 1em;
  font-weight: 200;
}

.body {
  padding-top: 10vh;
  padding-bottom: 15vh;
  display: flex;
  flex-direction: column;
  background-color: $primaryColor;
  min-height: 100vh;
}

// USER PAGE

#modal-header {
  background-color: $greeny;
}

#login {
  background-color: $greeny;
  min-height: 100vh;
  padding: 50px;
}

#login-img {
  display: block;
  margin: 0 auto;
  padding-bottom: 20px;
}

.modal-body {
  background-color: $primaryColor;
}

.modal-title {
  font-family: "Permanent Marker", serif;
}
#modal-footer {
  background-color: $greeny;
}

.confirm-action-modal {
  display: flex !important;
  background-color: rgb(0 0 0 / 25%);
}

.confirm-action-modal .modal-dialog {
  margin: auto;
  max-height: 100vh;
  min-width: 90vw;
}

h5 {
  text-align: left;
  color: $greeny;
  margin: 8px;
  font-weight: 400;
}

p {
  font-size: 20px;
  color: $dark;
  margin: 0px 6px 6px;
}

body {
  color: $dark;
  font-family: "Fredoka", sans-serif;
}
.gig-body {
  padding-top: 10vh;
  padding-bottom: 14vh;
  display: flex;
  flex-direction: column;

  background-color: $lightPinky;

  min-height: 100vh;
}
.date-picker-name {

  text-align: left;
  margin-left: auto;
  margin-right: auto;
  margin-top: 6px;
}
.date-picker {

  text-align: center;
  margin-left: auto;
  margin-right: 10px;
  margin-top: 6px;
}

// purple border for tab
.nav-tabs {
  border-bottom: 1px solid $tabSelectedBorder;
}

.nav-tabs .nav-item.show {
  background-color: $tabSelected;
  border-bottom: 1px solid $tabSelectedBorder;
}

.tab-content {
  background-color: $tabSelected;
}

.userPage-tabs .tab-content .tab-pane {
  max-height: 55vh;
  overflow: scroll;
}

.userPage-buttons-container {
  height: 15vh;
  display: flex;
  flex-flow: row wrap;
  justify-content: space-between;
  padding: 0px 30px;
  position: absolute;
  bottom: 13vh;
}

.userPage-buttons-container .btn {
  margin: auto;
}

.userPage-buttons-container .dropup {
  margin: auto;
}

#share-modal-button {
  background-color: $yeller;
  margin: 0px 0px 0px 15px;
  color: black !important;
}

#share-modal-dropdown {
  background-color: $yeller;
  margin: 0px 0px 0px 15px;
  color: black !important;
}

.nav-tabs .nav-link {
  color: rgb(86, 86, 86);
  font-family: "Permanent Marker", serif;
  background-color: $tabUnselected;
  border-top: 1px solid $tabUnselectedBorder;
  border-left: 1px solid $tabUnselectedBorder;
  border-right: 1px solid $tabUnselectedBorder;
  border-bottom: 1px solid $tabSelectedBorder;
}

.nav-tabs .nav-link.active {
  font-family: "Permanent Marker", serif;
  background-color: $tabSelected;
  color: $dark;
  border-top: solid 1px $tabSelectedBorder;
  border-left: solid 1px $tabSelectedBorder;
  border-right: solid 1px $tabSelectedBorder;
  border-bottom: solid 1px $tabSelected;
}

.card-detail {
  font-size: 16px;
  font-style: italic;
  font-weight: 100;
  margin-top: -5px;
  margin-left: 0px;
}

.card-content {
  font-weight: 500;
  line-height: normal;
  margin-left: 0px;
}

.ep-card-detail {
  font-size: 16px;
  font-style: italic;
  font-weight: 100;
}

.ep-card-content {
  font-weight: 500;
}
//HOMEPAGE

.body-home {
  padding-top: 10vh;
  padding-bottom: 26vh;
  display: flex;
  flex-direction: column;
  background-color: $primaryColor;
  min-height: 100vh;
}

.comment-btn {
  background-color: $purpley;
  border-radius: 17px;
  // padding: 3px 6px;
  margin-top: 5px;
  float: right;
}

.photo-btn {
  border-radius: 17px;
  // padding: 3px 6px;
  margin-top: 5px;
}

.comment-form {
  border-top: 1px solid $secondaryColor;
  border-radius: 0px;
  display: flex;
  flex-direction: row;
  max-height: 14vh;
  width: 100%;
  margin: 3px auto;
}

.form-check-input:checked {
  background-color: $pinky;
  border-color: $ternaryColor;
}

.form-check.form-switch {
  display: flex;
  flex-direction: row;
  flex-wrap: nowrap;
  justify-content: space-evenly;
}

.form-check-input:focus {
  border-color: #cc86fe;
  outline: 0;
  box-shadow: 0 0 0 0.25rem rgba(149, 13, 253, 0.25);
}

.footer {
  text-align: center;
}


.loader{
  display: flex;
  justify-content: center;
  align-items: center;
  align-content: center;
  position: relative;
  margin-top: 100px;
  text-align: center;
  font-size: 3em;
  flex-direction: column;

  // width: 100%;
  // height: auto;
}


//regular mode
.pg-theme-light {
  .btn-primary {
    background-color: $yeller !important;
    color: $dark;
  }

  .top-nav {
    justify-content: space-evenly;
    background-color: $greeny;
    height: 8vh;
    color: white;
    font-size: 1em;
    font-weight: 200;
  }
}


//colorblind mode
.pg-theme-vis {
  .btn-primary {
    background-color: $offBlack !important;
    color: white;
    text-transform: uppercase;
  }

  .btn-success {
    background-color: $offBlack !important;
    color: white;
    text-transform: uppercase;
  }


  .btn-danger{
    background-color: $offBlack !important;
    color: white;
    text-transform: uppercase;
  }

  .dropdown-toggle{
    background-color: $offBlack !important;
    color: white;

    text-transform: uppercase;
  }

  h5 {
    color: $offBlack;
    text-transform: uppercase;
  }

  .top-nav {
    background-color: $offBlack !important;
  }

  .card {
    background-color: $cardBackground2 !important;
  }

  * {
    border-color: $offBlack !important;
  }

  .bottom-nav {
    border-top-color: $offBlack !important;
  }

  .nav-tabs .nav-link {
    background-color: $tabSelected ;
    color: gray;
  }


  .nav-tabs .nav-link.active {
    background-color:$tabSelected;
    color: $offBlack;
    border-bottom: solid 1px $tabSelected !important;
  }

  #modal-header {
    color: white !important;
    background-color: $offBlack !important;
  }


}

.pg-theme-deep {
  .btn-primary {
    background-color: $pinky !important;
    color: $dark;
    animation: funEffects 2s linear infinite, jiggle 0.3s ease-in-out infinite;
    transform-origin: center;
    z-index: 1;
  }

  @keyframes funEffects {
    0%,
    100% {
      transform: translateY(0) rotate(0deg) translateX(0) scale(1);
    }
    25% {
      transform: translateY(-5px) rotate(90deg) translateX(-5px) scale(1.1);
    }
    50% {
      transform: translateY(0) rotate(180deg) translateX(0) scale(1);
    }
    75% {
      transform: translateY(-5px) rotate(270deg) translateX(-5px) scale(1.1);
    }
  }
}

